--- a/EzSchool/EzSchool.csproj
+++ b/EzSchool/EzSchool.csproj
@@ -141,6 +141,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AnnualTablesController.cs" />
+    <Compile Include="Controllers\ClassSubjectTablesController.cs" />
+    <Compile Include="Controllers\ClassTablesController.cs" />
     <Compile Include="Controllers\DesignationTablesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProgrameSessionTablesController.cs" />
@@ -2016,6 +2018,16 @@
     <Content Include="Views\ProgrameSessionTables\Details.cshtml" />
     <Content Include="Views\ProgrameSessionTables\Edit.cshtml" />
     <Content Include="Views\ProgrameSessionTables\Index.cshtml" />
+    <Content Include="Views\ClassTables\Create.cshtml" />
+    <Content Include="Views\ClassTables\Delete.cshtml" />
+    <Content Include="Views\ClassTables\Details.cshtml" />
+    <Content Include="Views\ClassTables\Edit.cshtml" />
+    <Content Include="Views\ClassTables\Index.cshtml" />
+    <Content Include="Views\ClassSubjectTables\Create.cshtml" />
+    <Content Include="Views\ClassSubjectTables\Delete.cshtml" />
+    <Content Include="Views\ClassSubjectTables\Details.cshtml" />
+    <Content Include="Views\ClassSubjectTables\Edit.cshtml" />
+    <Content Include="Views\ClassSubjectTables\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
