--- a/EzSchool/EzSchool.csproj
+++ b/EzSchool/EzSchool.csproj
@@ -141,6 +141,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AnnualTablesController.cs" />
+    <Compile Include="Controllers\AttendanceTablesController.cs" />
     <Compile Include="Controllers\ClassSubjectTablesController.cs" />
     <Compile Include="Controllers\ClassTablesController.cs" />
     <Compile Include="Controllers\DesignationTablesController.cs" />
@@ -150,7 +151,11 @@
     <Compile Include="Controllers\ProgrameSessionTablesController.cs" />
     <Compile Include="Controllers\ProgrameTablesController.cs" />
     <Compile Include="Controllers\SessionTablesController.cs" />
+    <Compile Include="Controllers\StaffAttendanceTablesController.cs" />
+    <Compile Include="Controllers\StaffTablesController.cs" />
+    <Compile Include="Controllers\StudentTablesController.cs" />
     <Compile Include="Controllers\SubjectTablesController.cs" />
+    <Compile Include="Controllers\SubmissionFeeTablesController.cs" />
     <Compile Include="Controllers\TimeTblTablesController.cs" />
     <Compile Include="Controllers\UserTablesController.cs" />
     <Compile Include="Controllers\UserTypeTablesController.cs" />
@@ -158,6 +163,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllers\StudentPromotTablesController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\AdminTemp\css\sb-admin-2.css" />
@@ -2046,6 +2052,36 @@
     <Content Include="Views\TimeTblTables\Details.cshtml" />
     <Content Include="Views\TimeTblTables\Edit.cshtml" />
     <Content Include="Views\TimeTblTables\Index.cshtml" />
+    <Content Include="Views\StudentPromotTables\Create.cshtml" />
+    <Content Include="Views\StudentPromotTables\Delete.cshtml" />
+    <Content Include="Views\StudentPromotTables\Details.cshtml" />
+    <Content Include="Views\StudentPromotTables\Edit.cshtml" />
+    <Content Include="Views\StudentPromotTables\Index.cshtml" />
+    <Content Include="Views\StudentTables\Create.cshtml" />
+    <Content Include="Views\StudentTables\Delete.cshtml" />
+    <Content Include="Views\StudentTables\Details.cshtml" />
+    <Content Include="Views\StudentTables\Edit.cshtml" />
+    <Content Include="Views\StudentTables\Index.cshtml" />
+    <Content Include="Views\AttendanceTables\Create.cshtml" />
+    <Content Include="Views\AttendanceTables\Delete.cshtml" />
+    <Content Include="Views\AttendanceTables\Details.cshtml" />
+    <Content Include="Views\AttendanceTables\Edit.cshtml" />
+    <Content Include="Views\AttendanceTables\Index.cshtml" />
+    <Content Include="Views\StaffAttendanceTables\Create.cshtml" />
+    <Content Include="Views\StaffAttendanceTables\Delete.cshtml" />
+    <Content Include="Views\StaffAttendanceTables\Details.cshtml" />
+    <Content Include="Views\StaffAttendanceTables\Edit.cshtml" />
+    <Content Include="Views\StaffAttendanceTables\Index.cshtml" />
+    <Content Include="Views\StaffTables\Create.cshtml" />
+    <Content Include="Views\StaffTables\Delete.cshtml" />
+    <Content Include="Views\StaffTables\Details.cshtml" />
+    <Content Include="Views\StaffTables\Edit.cshtml" />
+    <Content Include="Views\StaffTables\Index.cshtml" />
+    <Content Include="Views\SubmissionFeeTables\Create.cshtml" />
+    <Content Include="Views\SubmissionFeeTables\Delete.cshtml" />
+    <Content Include="Views\SubmissionFeeTables\Details.cshtml" />
+    <Content Include="Views\SubmissionFeeTables\Edit.cshtml" />
+    <Content Include="Views\SubmissionFeeTables\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
