--- a/Application/DatabaseAccess/DatabaseAccess.csproj
+++ b/Application/DatabaseAccess/DatabaseAccess.csproj
@@ -65,6 +65,33 @@
     <Compile Include="DesignationTable.cs">
       <DependentUpon>SchoolMgt.tt</DependentUpon>
     </Compile>
+    <Compile Include="EmployeeCertificationTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeEducationTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeLanguageTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeLeavingTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeResumeTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeSalaryTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeSkillTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeWorkExperienceTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
     <Compile Include="ExamMarksTable.cs">
       <DependentUpon>SchoolMgt.tt</DependentUpon>
     </Compile>
@@ -78,6 +105,9 @@
       <DependentUpon>SchoolMgt.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchoolLeavingTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
     <Compile Include="SchoolMgt.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -92,6 +122,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>SchoolMgt.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="SectionTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
     </Compile>
     <Compile Include="SessionTable.cs">
       <DependentUpon>SchoolMgt.tt</DependentUpon>
@@ -124,6 +157,9 @@
       <DependentUpon>SchoolMgt.tt</DependentUpon>
     </Compile>
     <Compile Include="UserTypeTable.cs">
+      <DependentUpon>SchoolMgt.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vAllUser.cs">
       <DependentUpon>SchoolMgt.tt</DependentUpon>
     </Compile>
   </ItemGroup>
