--- a/EzSchool/EzSchool.csproj
+++ b/EzSchool/EzSchool.csproj
@@ -176,6 +176,8 @@
     <Compile Include="Controllers\ClassSubjectTablesController.cs" />
     <Compile Include="Controllers\ClassTablesController.cs" />
     <Compile Include="Controllers\DesignationTablesController.cs" />
+    <Compile Include="Controllers\EmployeeSalaryTablesController.cs" />
+    <Compile Include="Controllers\EventTablesController.cs" />
     <Compile Include="Controllers\ExamMarksTablesController.cs" />
     <Compile Include="Controllers\ExamTablesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -2096,11 +2098,6 @@
     <Content Include="Views\ExamTables\Details.cshtml" />
     <Content Include="Views\ExamTables\Edit.cshtml" />
     <Content Include="Views\ExamTables\Index.cshtml" />
-    <Content Include="Views\ExamMarksTables\Create.cshtml" />
-    <Content Include="Views\ExamMarksTables\Delete.cshtml" />
-    <Content Include="Views\ExamMarksTables\Details.cshtml" />
-    <Content Include="Views\ExamMarksTables\Edit.cshtml" />
-    <Content Include="Views\ExamMarksTables\Index.cshtml" />
     <Content Include="Views\TimeTblTables\Create.cshtml" />
     <Content Include="Views\TimeTblTables\Delete.cshtml" />
     <Content Include="Views\TimeTblTables\Details.cshtml" />
@@ -2148,6 +2145,21 @@
     <Content Include="Views\StudentPromotTables\Details.cshtml" />
     <Content Include="Views\StudentPromotTables\Edit.cshtml" />
     <Content Include="Views\StudentPromotTables\Index.cshtml" />
+    <Content Include="Views\EmployeeSalaryTables\Create.cshtml" />
+    <Content Include="Views\EmployeeSalaryTables\Delete.cshtml" />
+    <Content Include="Views\EmployeeSalaryTables\Details.cshtml" />
+    <Content Include="Views\EmployeeSalaryTables\Edit.cshtml" />
+    <Content Include="Views\EmployeeSalaryTables\Index.cshtml" />
+    <Content Include="Views\ExamMarksTables\Create.cshtml" />
+    <Content Include="Views\ExamMarksTables\Delete.cshtml" />
+    <Content Include="Views\ExamMarksTables\Details.cshtml" />
+    <Content Include="Views\ExamMarksTables\Edit.cshtml" />
+    <Content Include="Views\ExamMarksTables\Index.cshtml" />
+    <Content Include="Views\EventTables\Create.cshtml" />
+    <Content Include="Views\EventTables\Delete.cshtml" />
+    <Content Include="Views\EventTables\Details.cshtml" />
+    <Content Include="Views\EventTables\Edit.cshtml" />
+    <Content Include="Views\EventTables\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
